# the-chosen-remastered

./: .gitignore  Makefile  README.md  meson.build
configuration-files/: config.hpp.in  meson.build
include/: character.hpp  cli.hpp  customstring.hpp  filehandling.hpp  game.hpp  gameentity.hpp  item.hpp  parser.hpp  player.hpp  resources.hpp  tui.hpp  world.hpp
resources/: splash.txt  the-chosen-remastered.desktop  the-chosen.afdesign
resources/man/: the-chosen-remastered.6
src/: character.cpp  cli.cpp  customstring.cpp  filehandling.cpp  game.cpp  gameentity.cpp  item.cpp  main.cpp  parser.cpp  player.cpp  resourcehandling.cpp  resources.cpp  tui.cpp  world.cpp
